--- a/index.html
+++ b/index.html
@@ -239,15 +239,15 @@
         </div>
 
         <div class="admin-actions" style="margin-bottom: 40px; background: #111; padding: 30px; border-radius: 20px;">
-            <h3 style="margin-bottom: 20px; color: var(--primary);">إضافة عمل جديد للمعرض</h3>
+            <h3 style="margin-bottom: 20px; color: var(--primary);">إضافة عمل جديد (يوتيوب أو جوجل درايف)</h3>
             <div class="form-grid" style="grid-template-columns: 1fr 1fr; gap: 20px;">
                 <div class="form-group">
-                    <label>رابط الصورة أو الفيديو</label>
-                    <input type="text" id="newItemLink" placeholder="أدخل الرابط المباشر">
+                    <label>رابط الفيديو أو المجلد</label>
+                    <input type="text" id="newItemLink" placeholder="رابط يوتيوب أو رابط جوجل درايف">
                 </div>
                 <div class="form-group">
-                    <label>وصف العمل</label>
-                    <input type="text" id="newItemDesc" placeholder="مثال: سورة البقرة - القارئ فلان">
+                    <label>وصف العمل / العنوان</label>
+                    <input type="text" id="newItemDesc" placeholder="مثال: سورة البقرة - أو - مكتبة التلاوات">
                 </div>
             </div>
             <button onclick="addNewGalleryItem()" class="btn-primary" style="margin-top: 20px;">إضافة المشروع</button>
