--- a/index.html
+++ b/index.html
@@ -232,6 +232,18 @@
         </div>
     </div>
 
+    <div id="libraryModal" class="modal">
+        <div class="modal-content library-modal-content">
+            <div class="modal-header">
+                <h2 id="libraryTitle">المكتبة الصوتية</h2>
+                <button onclick="closeLibraryModal()" class="close-modal">&times;</button>
+            </div>
+            <div id="libraryIframeContainer" class="folder-iframe-wrapper">
+                <!-- Iframe will be injected here -->
+            </div>
+        </div>
+    </div>
+
     <div id="adminPanel" class="admin-panel">
         <div class="admin-header">
             <h2>لوحة التحكم - استوديو أهل القرآن</h2>
